@@ -32,6 +32,7 @@
 #include <UnitTest++.h>
 #include <ode/ode.h>
 
+#include "../../ode/src/config.h"
 #include "../../ode/src/joints/hinge2.h"
 
 
